Commented out compare, admin, and view amortization button. Redo the database to be textfile. Which is outputted in users/.vismera_data